Add FileSystemAbstraction::streamFilesRecursive overload to include directories