@@ -19,12 +19,11 @@
  */
 package org.neo4j.io.fs;
 
-import static java.util.stream.Collectors.toList;
 import static org.neo4j.io.IOUtils.uncheckedFunction;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.List;
+import java.util.Arrays;
 import java.util.stream.Stream;
 
 public final class StreamFilesRecursive {
@@ -33,11 +32,11 @@ public final class StreamFilesRecursive {
     }
 
     /**
-     * Static implementation of {@link FileSystemAbstraction#streamFilesRecursive(Path)} that does not require
+     * Static implementation of {@link FileSystemAbstraction#streamFilesRecursive(Path,boolean)} that does not require
      * any external state, other than what is presented through the given {@link FileSystemAbstraction}.
-     *
-     * Return a stream of {@link FileHandle file handles} for every file in the given directory, and its
-     * sub-directories.
+     * <p>
+     * Return a stream of {@link FileHandle file handles} for every file within the given directory, and its
+     * subdirectories.
      * <p>
      * Alternatively, if the {@link Path} given as an argument refers to a file instead of a directory, then a stream
      * will be returned with a file handle for just that file.
@@ -45,31 +44,35 @@ public final class StreamFilesRecursive {
      * The stream is based on a snapshot of the file tree, so changes made to the tree using the returned file handles
      * will not be reflected in the stream.
      * <p>
-     * No directories will be returned. Only files. If a file handle ends up leaving a directory empty through a
-     * rename or a delete, then the empty directory will automatically be deleted as well.
-     * Likewise, if a file is moved to a path where not all of the directories in the path exists, then those missing
-     * directories will be created prior to the file rename.
+     * If a file handle ends up leaving a directory empty through a rename or a delete, then the empty directory will
+     * automatically be deleted as well. Likewise, if a file is moved to a path where not all the directories in the
+     * path exists, then those missing directories will be created prior to the file rename.
      *
-     * @param directory The base directory to start streaming files from, or the specific individual file to stream.
      * @param fs The {@link FileSystemAbstraction} to use for manipulating files.
+     * @param path The base directory to start streaming files from, or the specific individual file to stream.
+     * @param includeDirectories {@code true} to include directories in the {@link Stream}, {@code false} otherwise.
      * @return A {@link Stream} of {@link FileHandle}s
      */
-    public static Stream<FileHandle> streamFilesRecursive(Path directory, FileSystemAbstraction fs) throws IOException {
-        Path canonicalizedDirectory = directory.toAbsolutePath().normalize();
+    public static Stream<FileHandle> streamFilesRecursive(
+            FileSystemAbstraction fs, Path path, boolean includeDirectories) throws IOException {
+        final var canonicalizedDirectory = path.toAbsolutePath().normalize();
         // We grab a snapshot of the file tree to avoid seeing the same file twice or more due to renames.
-        List<Path> snapshot =
-                streamFilesRecursiveInner(canonicalizedDirectory, fs).collect(toList());
-        return snapshot.stream().map(f -> new WrappingFileHandle(f, canonicalizedDirectory, fs));
+        final var snapshot =
+                streamFilesRecursiveInner(fs, canonicalizedDirectory, includeDirectories).toList().stream();
+        return snapshot.map(f -> new WrappingFileHandle(f, canonicalizedDirectory, fs));
     }
 
-    private static Stream<Path> streamFilesRecursiveInner(Path directory, FileSystemAbstraction fs) throws IOException {
-        if (!fs.fileExists(directory)) {
+    private static Stream<Path> streamFilesRecursiveInner(
+            FileSystemAbstraction fs, Path path, boolean includeDirectories) throws IOException {
+        if (!fs.fileExists(path)) {
             return Stream.empty();
         }
-        if (!fs.isDirectory(directory)) {
-            return Stream.of(directory);
+        if (!fs.isDirectory(path)) {
+            return Stream.of(path);
         }
-        return Stream.of(fs.listFiles(directory))
-                .flatMap(uncheckedFunction(f -> fs.isDirectory(f) ? streamFilesRecursiveInner(f, fs) : Stream.of(f)));
+
+        final var recurse = Arrays.stream(fs.listFiles(path))
+                .flatMap(uncheckedFunction(f -> streamFilesRecursiveInner(fs, f, includeDirectories)));
+        return includeDirectories ? Stream.concat(Stream.of(path), recurse) : recurse;
     }
 }
